--- a/home.html
+++ b/home.html
@@ -11,7 +11,11 @@
             <a href="#home">Home</a>
             <a href="#characterlist">Character List</a>
             <a href="#characterbuilder">Character Builder</a>
+            <a href="#login">Login</a>
+            <a href="#signup">Sign Up</a>
         </div>
-
+        <div class="profile">
+            <a href="#login">Login</a>
+        </div>
     </body>
 </html>
